Adding Cucumber tests, liquibase support and use case implementation
